--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -32,15 +32,16 @@
                             <!--Toman el valor del dropdown list seleccionado-->
                             @Html.Hidden("changeUnidad", null)
                             @Html.Hidden("changeCarrera", null)
+                            @Html.Hidden("changeCurso", null)
 
                             <label>Unidad Academica:</label> @Html.DropDownList("unidadAcademica", null, "<Seleccione Unidad Académica>",
-                           new { @class = "form-control", @onChange = "document.getElementById('changeUnidad').value = this.value; this.form.submit();" })
+new { @class = "form-control", @onChange = "document.getElementById('changeUnidad').value = this.value; this.form.submit();" })
 
 
                             <label> Carreras: </label> @Html.DropDownList("nombreCarrera", null, "<Seleccione Carrera>", new { @class = "form-control",
-                                                      @onChange = "document.getElementById('changeCarrera').value = this.value; this.form.submit();" })
+                           @onChange = "document.getElementById('changeCarrera').value = this.value; this.form.submit();" })
 
-                            <label> Cursos: </label> @Html.DropDownList("nombreCurso", null, "<Seleccione Curso>", new { @class = "form-control" })
+                            <label> Cursos: </label> @Html.DropDownList("nombreCurso", null, "<Seleccione Curso>", new { @class = "form-control", })
                             @* <label> Semestre: </label> @Html.DropDownList("semestre", null, "<Seleccione Semestre>", new { @class = "form-control" })*@
                             @* <label> Año: </label> @Html.DropDownList("ano", null, "<Seleccione Año>", new { @class = "form-control" })<br />*@
                             @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
