Experimentos para trabajar on js

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -47,7 +47,7 @@
 }
 
 
-@{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; int item_actual = 0;}
+@{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual;}
 
 <div class="panel-group" id="accordion1">
 
@@ -82,6 +82,8 @@
                                             <a data-toggle="collapse" data-parent="#accordion2_@id_counter" href="#collapseThreeOne_@seccion_counter">
                                                 @Html.DisplayFor(model => seccion.Item.TextoPregunta) @*Despliega las preguntas de una seccion en especifico*@
                                             </a>
+                                            <button type="button" onclick = "graficarResultados(this.itemId)" >Click Me!</button>
+                                            <a> "@item_actual"</a>
                                         </h4>
                                     </div>
                                     <div id="collapseThreeOne_@seccion_counter" class="panel-collapse collapse">
@@ -139,3 +141,8 @@
 
 </div>
 
+@*<script src="~/Scripts/Graficar.js"></script>*@
+<script>function graficarResultados(itemId) {
+    alert(itemId);
+    $.get("/VisualizarFormulario/GraficoPie", itemId);
+}</script> 
