--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -47,94 +47,102 @@
 }
 
 
-@{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; int item_actual = 0;}
+@{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual = ""; List<string> secciones = new List<string>(); bool seccion_repetida = false;}
 
 <div class="panel-group" id="accordion1">
 
-    @foreach (var formulario in Model.Conformado_Item_Sec_Form.Take(2))
+    @foreach (var formulario in Model.Conformado_Item_Sec_Form)
     {
         seccion_actual = formulario.TituloSeccion;
 
         @*Se ocupa poner una restriccion para no mostrar seciones repetidas*@
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree_@id_counter">
-                        @Html.DisplayFor(model => formulario.TituloSeccion) @*Despliega las secciones de un formulario en especifico*@
-                    </a>
-                </h4>
-            </div>
-            <div id="collapseThree_@id_counter" class="panel-collapse collapse">
-                <div class="panel-body">
+        if (secciones.Contains(seccion_actual)) { seccion_repetida = true; }
+        else { secciones.Add(seccion_actual); seccion_repetida = false; }
 
-                    <div class="panel-group" id="accordion2_@id_counter">
 
-                        @foreach (var seccion in Model.Conformado_Item_Sec_Form)
-                        {
-                            item_actual = seccion.Item.ItemId;
+        if (seccion_repetida == false)
+        {
 
-                            if (seccion.TituloSeccion == seccion_actual && seccion.ItemId == item_actual)
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree_@id_counter">
+                            @Html.DisplayFor(model => formulario.TituloSeccion) @*Despliega las secciones de un formulario en especifico*@
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseThree_@id_counter" class="panel-collapse collapse">
+                    <div class="panel-body">
+
+                        <div class="panel-group" id="accordion2_@id_counter">
+
+                            @foreach (var seccion in Model.Conformado_Item_Sec_Form)
                             {
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#accordion2_@id_counter" href="#collapseThreeOne_@seccion_counter">
-                                                @Html.DisplayFor(model => seccion.Item.TextoPregunta) @*Despliega las preguntas de una seccion en especifico*@
-                                            </a>
-                                        </h4>
-                                    </div>
-                                    <div id="collapseThreeOne_@seccion_counter" class="panel-collapse collapse">
-                                        <div class="panel-body">
+                                item_actual = seccion.Item.ItemId;
 
-                                            @if (seccion.Item.TipoPregunta != 1)
-                                            {
-                                                <a>Resultados</a> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
-                                            }
+                                if (seccion.TituloSeccion == seccion_actual && seccion.ItemId == item_actual)
+                                {
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <a data-toggle="collapse" data-parent="#accordion2_@id_counter" href="#collapseThreeOne_@seccion_counter">
+                                                    @Html.DisplayFor(model => seccion.Item.TextoPregunta) @*Despliega las preguntas de una seccion en especifico*@
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseThreeOne_@seccion_counter" class="panel-collapse collapse">
+                                            <div class="panel-body">
 
-                                            <div class="panel-group" id="accordion3_@seccion_counter">
-
-                                                @if (seccion.Item.TieneObservacion == observation)
+                                                @if (seccion.Item.TipoPregunta != 1)
                                                 {
-                                                    <div class="panel panel-default">
-                                                        <div class="panel-heading">
-                                                            <h4 class="panel-title">
-                                                                <a data-toggle="collapse" data-parent="#accordion3_@seccion_counter" href="#collapseThreeTwo_@seccion_counter">
-                                                                    Observaciones @*Aqui se muestran las observaciones relacionadas a una preguntas*@
-                                                                </a>
-                                                            </h4>
-                                                        </div>
-                                                        <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
-                                                            <div class="panel-body">
-
-                                                                @foreach (var item in Model.Conformado_Item_Sec_Form)
-                                                                {
-                                                                    @Html.DisplayFor(model => item.Item.Responde)
-
-                                                                    @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
-                                                                }
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                                    <a>Resultados</a> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
                                                 }
 
+                                                <div class="panel-group" id="accordion3_@seccion_counter">
 
+                                                    @if (seccion.Item.TieneObservacion == observation)
+                                                    {
+                                                        <div class="panel panel-default">
+                                                            <div class="panel-heading">
+                                                                <h4 class="panel-title">
+                                                                    <a data-toggle="collapse" data-parent="#accordion3_@seccion_counter" href="#collapseThreeTwo_@seccion_counter">
+                                                                        Observaciones @*Aqui se muestran las observaciones relacionadas a una preguntas*@
+                                                                    </a>
+                                                                </h4>
+                                                            </div>
+                                                            <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
+                                                                <div class="panel-body">
+
+                                                                    @foreach (var item in Model.Conformado_Item_Sec_Form)
+                                                                    {
+                                                                        @Html.DisplayFor(model => item.Item.Responde)
+
+                                                                        @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
+                                                                    }
+
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    }
+
+
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                seccion_counter++;
+                                    seccion_counter++;
+                                }
                             }
-                        }
-                    </div>
+                        </div>
 
+                    </div>
                 </div>
             </div>
-        </div>
 
-        id_counter++;
+            id_counter++;
+        }
     }
 
 </div>
