Se implementan cuadros de texto para visualizar de forma compacta las observaciones y las respuestas(pregunta texto_libre) de una pregunta en especifico, y visualizar las etiquestas de forma mas apropiada.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -9,11 +9,12 @@
 @foreach (var title in Model.Formulario_Respuesta.Take(1))
 {
     <td>
-        <h3 style="text-align:left;">
-            Sigla: @Html.DisplayFor(modelItem => title.Grupo.SiglaCurso)
+        <h4 style="text-align:left;">
+            <b>Sigla:</b>
+            @Html.DisplayFor(modelItem => title.Grupo.SiglaCurso)
 
             <span style="float:right;">
-                Profesor:
+                <b>Profesor:</b>
                 @Html.DisplayFor(modelItem => title.Profesor.Persona.Nombre)
                 @Html.DisplayFor(modelItem => title.Profesor.Persona.Apellido1)
                 @Html.DisplayFor(modelItem => title.Profesor.Persona.Apellido2)
@@ -21,30 +22,36 @@
 
             <br><br>
 
-            Curso: @Html.DisplayFor(modelItem => title.Grupo.Curso.Nombre)
+            <b>Curso:</b>
+            @Html.DisplayFor(modelItem => title.Grupo.Curso.Nombre)
 
             <span style="float:right;">
-                Semestre:
+                <b>Semestre:</b> 
                 @Html.DisplayFor(modelItem => title.Grupo.SemestreGrupo)
-                Año:
+
+                <b>Año:</b>
                 @Html.DisplayFor(modelItem => title.Grupo.AnnoGrupo)
             </span>
 
             <br><br>
 
-            Formulario:
+            <b>Formulario:</b>
             @Html.DisplayFor(modelItem => title.CodigoFormulario)
 
             @Html.DisplayFor(modelItem => title.Formulario.Nombre)
 
             <span style="float:right;">
-                Grupo:
+                <b>Grupo:</b>
                 @Html.DisplayFor(modelItem => title.Grupo.Numero)
             </span>
 
-        </h3>
+        </h4>
     </td>
+
+    <br><br>
 }
+
+
 
 
 @{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual = ""; List<string> secciones = new List<string>(); bool seccion_repetida = false;}
@@ -96,7 +103,20 @@
 
                                                 @if (seccion.Item.TipoPregunta != 1)
                                                 {
-                                                    <a>Resultados</a> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
+                                                    <p>Resultados</p> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
+                                                }
+                                                else
+                                                {
+                                                    <div style="height:180px; overflow-y: scroll;">
+
+                                                        @foreach (var item in Model.Conformado_Item_Sec_Form)
+                                                        {
+                                                            <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p>
+                                                            <br>
+
+                                                            @*Se ocupa encontrar la forma de devolver las respuesta de texto_libre por pregunta*@
+                                                        }
+                                                    </div>
                                                 }
 
                                                 <div class="panel-group" id="accordion3_@seccion_counter">
@@ -113,13 +133,14 @@
                                                             </div>
                                                             <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
                                                                 <div class="panel-body">
+                                                                    <div style="height:200px; overflow-y: scroll;">
+                                                                        @foreach (var item in Model.Conformado_Item_Sec_Form)
+                                                                        {
+                                                                            <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p> <br>
 
-                                                                    @foreach (var item in Model.Conformado_Item_Sec_Form)
-                                                                    {
-                                                                        @Html.DisplayFor(model => item.Item.Responde)
-
-                                                                        @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
-                                                                    }
+                                                                            @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
+                                                                        }
+                                                                    </div>
 
                                                                 </div>
                                                             </div>
