--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <!--Barra-->
+    <!--Barra-->    
     @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
     @using Opiniometro_WebApp.Controllers.Servicios;
     @using Opiniometro_WebApp.Controllers;
@@ -21,32 +21,31 @@
             <div class="container-fluid" style="margin-left:100px">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Bienvenido", "Index", "Home")</li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@IdentidadManager.obtener_perfil_actual()<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    @{
-                                        ICollection<String> perfiles = PerfilController.ObtenerPerfiles();
-                                        ViewBag.perfiles = perfiles;
-                                        for (int contador = 0; contador < perfiles.Count; contador++)
-                                        {
-                                            <a href="@Url.Action("CambioPerfil", "Perfil", new { perfil_elegido = @ViewBag.perfiles[contador] })">@ViewBag.perfiles[contador]</a>
-                                        }
-                                    }
-                                </li>
-                            </ul>
-                        </li>
-                        <li>@Html.ActionLink("Cerrar sesión", "CerrarSesion", "Auth")</li>
+                        <li>@Html.Label("Bienvenido", new { style = "font-size:22px"})</li>
+                        
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
         </nav>
 
-        <nav class="navbar navbar-opiniometro-ternaria navbar-fixed-top" style="margin-top:150px; z-index:2">
+        <nav class="navbar navbar-opiniometro-ternaria navbar-fixed-top" style="margin-top:135px; z-index:2">
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Opiniómetro@UCR", "Index", "Home", new { style = "margin-left:100px" })</li>
+                    <li>
+                        <a href="/" style="margin-left:90px">
+                            <span class="glyphicon glyphicon-home"></span>
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfiles<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Cambiar perfil actual", "Falta", "Falta")</li>
+                            <li>@Html.ActionLink("Asignar/Revocar permisos", "Falta", "Falta")</li>
+                            <li>@Html.ActionLink("Asignar/Revocar perfiles", "Falta", "Falta")</li>
+                            <li>@Html.ActionLink("Crear perfil", "Falta", "Falta")</li>
+                            <li>@Html.ActionLink("Eliminar perfil", "Falta", "Falta")</li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuario<span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -63,7 +62,11 @@
                             <li>@Html.ActionLink("Sección", "Index", "Seccion")</li>
                             <li>@Html.ActionLink("Ítem", "Index", "Item")</li>
                         </ul>
-                    </li>
+                    </li>                    
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@Html.ActionLink("Cerrar sesión", "CerrarSesion", "Auth", new { style = "margin-right:90px" })</li>
                 </ul>
             </div>
         </nav>
