--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -4,110 +4,159 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<thead>
-    
-        <tr>
-          
-            
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>
+
+    var datos = {
+        codigoFormulari = Model.Formulario.codigoFormulario
+    };
+
+    $(document).ready(function () {       
+        $("#btnSave").click(function () {
+            $.ajax(
+            {
+                type: "POST", //HTTP POST Method
+                    url: "AgregarConformado", // Controller/View
+                data: { //Passing data
+                    
+                    },
+                    success(function() {
+                        $('#ConformadosID').html(result);
+                    }),
+
+            });
+
+        });
+    });
+
+</script>
+
+<div id="content">
+    <div class="row">
+        <div class="col-sm-4" ><h4><strong >Codigo:</strong> @Model.Formulario.CodigoFormulario </h4></div>
+        <div class="col-sm-8"><h4><strong>Nombre:</strong> @Model.Formulario.Nombre</h4></div>
+    </div>
+    <button id="btnSave" name="btnSave" >GUARDAR</button>
+    <div class="row">
+        <table class="table table-bordered table-striped">
+            <tr>
+                <td></td>
                 <td>
-                
-                    <div class="row">
-                        <h4>Codigo: @Model.Formulario.CodigoFormulario </h4>
-                        <h4>Nombre: @Model.Formulario.Nombre</h4>
-                    </div>
-
-                    <div>
-                        <div style="float: right; width: 500px; padding: 15px;">
-
-                            <table class="table table-bordered">
-                                <tr>
-                                    <td>
-                                        @Html.Label("Código")
-                                    </td>
-                                    <td>
-                                        @Html.Label("Planteamiento")
-                                    </td>
-                                    <td>
-                                        @Html.Label("Tipo")
-                                    </td>
-                                </tr>
-
-
-                                @foreach (var item in Model.Items)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.ItemId)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TextoPregunta)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TipoPregunta)
-                                        </td>
-                                        <td>
-                                            <input type="checkbox" class="chcktbl" id="@item.ItemId"/>
-                                        </td>
-                                    </tr>
-                                }
-
-                            </table>
-
-                        </div>
-
-                        <div style=" width: 500px; padding:  15px;">
-
-                            <table class="table table-bordered">
-                                <tr>
-                                    <td>
-                                        @Html.Label("Titulo")
-                                    </td>
-                                    <td>
-                                        @Html.Label("Descripción")
-                                    </td>
-                                </tr>
-
-
-                                @foreach (var seccion in Model.Secciones)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(model => seccion.Titulo)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(model => seccion.Descripcion)
-                                        </td>
-                                        <td>
-                                            <input type="checkbox" class="chcktbl" id="@seccion.Titulo" />
-                                        </td>
-                                    </tr>
-                                }
-
-                            </table>
-
-                        </div>
-                    </div>
-
-
-                    <button disabled>
-                        Añadir pregunta al formulario.
-                    </button>
-
-                    <div style="float: left; width: 1000px; padding: 50px;">
-                        @*@Html.Action("SeccionesAsignadas", new
-                                    {CodForm = Model.Formulario.CodigoFormulario})*@
-                    </div>
-
-                    <input type="submit" value="Generate report" />
-                    <div style="clear: both;"></div>
+                    @Html.Label("Titulo")
                 </td>
-            
-        </tr>
-    
+                <td>
+                    @Html.Label("Descripción")
+                </td>
+            </tr>
+
+
+            @foreach (var seccion in Model.Secciones)
+            {
+                <tr>
+                    <td>
+                        <input type="radio" id="seccion" name="seccion" value="@seccion.Titulo" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => seccion.Titulo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => seccion.Descripcion)
+                    </td>
+
+                </tr>
+            }
+
+        </table>
+    </div>
+    <div class="row">
+        <table class="table table-bordered">
+            <tr>
+                <td></td>
+                <td>
+                    @Html.Label("Código")
+                </td>
+                <td>
+                    @Html.Label("Planteamiento")
+                </td>
+                <td>
+                    @Html.Label("Tipo")
+                </td>
+            </tr>
+
+
+            @foreach (var item in Model.Items)
+            {
+                <tr>
+                    <td>
+                        <input type="checkbox" class="chcktbl"  name="item" id="item" value="@item.ItemId" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ItemId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TextoPregunta)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TipoPregunta)
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+    <div class="row" id="ConformadosID">
+        
+        @Html.Partial("ConformadoVParcial", Model.Conformados)
+        
+    </div>
+</div>
+
+<thead>
+
+    <tr>
+
+
+        <td>
+
+
+
+            <div>
+                <div style="float: right; width: 500px; padding: 15px;">
+
+
+                </div>
+
+                <div style=" width: 500px; padding:  15px;">
+
+
+
+                </div>
+            </div>
+
+
+            <button disabled>
+                Añadir pregunta al formulario.
+            </button>
+
+            <div style="float: left; width: 1000px; padding: 50px;">
+                @*@Html.Action("SeccionesAsignadas", new
+                    {CodForm = Model.Formulario.CodigoFormulario})*@
+            </div>
+
+            <input type="submit" value="Generate report" />
+            <div style="clear: both;"></div>
+        </td>
+
+    </tr>
+
 </thead>
 
 
-
+<script>
+    function prueba() {
+            document.location = '@Url.Action("Index")';
+        }
+</script>
 
 
 
