--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -4,75 +4,72 @@
     ViewBag.Title = "Crear Formulario";
 }
 
+@* Inclusiones necesarias para poder hacer validaciones *@
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <h2>Crear Formulario</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    @*<h4>Formulario</h4>*@
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2"}  )
 
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        @*<h4>Formulario</h4>*@
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
 
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
+
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    @* Creacion de los tres botones de la forma que el PO quiere que se visualicen siempre *@
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-        
-            <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario" 
-                   @{ if(null != null) { 
-                         @:disabled="disabled" 
-                    } }
-                    />
-            @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
-            @*<input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />*@
+        @* Creacion de los tres botones de la forma que el PO quiere que se visualicen siempre *@
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+
+                <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario"
+                       @{ if (null != null) { @: disabled="disabled"
+                       } } />
+                @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
+                @*<input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />*@
+            </div>
         </div>
-    </div>
 
-    
 
-    @* Accion al seleccionar el boton de vista previa de formulario*@
-    @*<script>
-            function accionBotonVistaPreviaFormulario() {
-                document.getElementById("botonVistaPreviaFormulario").style.color = "blue";
-            }
-        </script>*@
 
-    @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
-    <script>
+        @* Accion al seleccionar el boton de vista previa de formulario*@
+        @*<script>
+                function accionBotonVistaPreviaFormulario() {
+                    document.getElementById("botonVistaPreviaFormulario").style.color = "blue";
+                }
+            </script>*@
+
+        @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
+        <script>
         function accionBotonCancelar() {
             document.location = '@Url.Action("Index")';
         }
-    </script>
+        </script>
 
 
 
 
 
 
-</div>
-}
-
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    </div>
 }
