--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -4,82 +4,83 @@
     ViewBag.Title = "Crear Pregunta";
 }
 
+@* Inclusiones necesarias para poder hacer validaciones *@
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <h2>Crear Pregunta</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    @*<h4>Item</h4>*@
-    <hr />
 
-    <div class="form-group">
-        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ItemId, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        @*<h4>Item</h4>*@
+        <hr />
+
+        <div class="form-group">
+            @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ItemId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione")
-            @Html.ValidationMessageFor(model => model.TipoPregunta, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione")
+                @Html.ValidationMessageFor(model => model.TipoPregunta, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
 
-    <div class="form-group">
-        @Html.Label("Texto Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TextoPregunta, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TextoPregunta, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Texto Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TextoPregunta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TextoPregunta, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Categoria, "NombreCategoria", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("NombreCategoria", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Categoria, "NombreCategoria", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("NombreCategoria", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
 
-    <div class="form-group">
-        @Html.Label("Tiene Observación", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TieneObservacion, new SelectList(ViewBag.BooleanItems, "Value", "Text"), "Seleccione")
-            @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Tiene Observación", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.TieneObservacion, new SelectList(ViewBag.BooleanItems, "Value", "Text"), "Seleccione")
+                @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
 
-    @* Creacion de botones en la misma linea y con color gris *@
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()" />
-            @*<input type="submit" value="Vista Previa" disabled class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>*@
-            <input type="button" value="Cancelar" class="btn btn-secondary" id="botonCancelar" onclick="accionBotonCancelar()" />
+        @* Creacion de botones en la misma linea y con color gris *@
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Crear" class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()" />
+                @*<input type="submit" value="Vista Previa" disabled class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>*@
+                <input type="button" value="Cancelar" class="btn btn-secondary" id="botonCancelar" onclick="accionBotonCancelar()" />
+            </div>
         </div>
-    </div>
 
 
-    @* La accion que sucede al seleccionar boton Cancelar *@
-    <script>
+        @* La accion que sucede al seleccionar boton Cancelar *@
+        <script>
         function accionBotonCancelar() {
             document.location = '@Url.Action("Index")';
         }
-    </script>
+        </script>
 
-</div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    </div>
 }
