--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Create.cshtml
@@ -4,8 +4,13 @@
     ViewBag.Title = "Crear Sección";
 }
 
-<h2>Crear Seccion</h2>
+@* Inclusiones necesarias para poder hacer validaciones *@
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
+<h2>Crear Seccion</h2>
 
 @using (Html.BeginForm())
 {
@@ -21,7 +26,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
-            
+
             </div>
         </div>
 
@@ -48,8 +53,3 @@
             document.location = '@Url.Action("Index")';
         }
 </script>
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
