Se actualiza el modelo de la base de datos que habian datos basura

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -112,7 +112,7 @@
                                                         @foreach (var item in Model.Conformado_Item_Sec_Form)
                                                         {
                                                             <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p>
-                                                            <br>
+                                                            <hr>
 
                                                             @*Se ocupa encontrar la forma de devolver las respuesta de texto_libre por pregunta*@
                                                         }
@@ -136,7 +136,8 @@
                                                                     <div style="height:200px; overflow-y: scroll;">
                                                                         @foreach (var item in Model.Conformado_Item_Sec_Form)
                                                                         {
-                                                                            <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p> <br>
+                                                                            <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p> 
+                                                                            <hr>
 
                                                                             @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
                                                                         }
