Cambios en filtros de busqueda de grupos

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 @Styles.Render("~/Content/scrollbar-tabla.css")
+<link href="~/Content/filtroAsig.css" rel="stylesheet" />
 
 <div>
     <h1 align="center">Asignación de herramientas de evaluación</h1>
@@ -17,34 +18,31 @@
             <div class="panel panel-default">
                 <div class="panel-heading"><h3>Buscar grupos</h3></div>
                 <div class="panel-body">
-                    
+
                     <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
                    @using (Html.BeginForm())
                     {
-                            
                         <!-- Buscador -->
                         <p>
+                            <div class="filtroAsig">
+                                <a> @Html.DropDownList("unidadAcademica", null, "Unidad Academica", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
+                                <a> @Html.DropDownList("nombreCarrera", null, "Carrera", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
+                                <a> @Html.DropDownList("nombreCurso", null, "Curso", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
+                                <a> @Html.DropDownList("semestre", null, "Semestre", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
+                                <a> @Html.DropDownList("ano", null, "Año", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
+                                @*<b> @Html.DropDownList("profe", null, "Profesor", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </b>*@
+                                @*<b> @Html.DropDownList("enfasis", null, "Énfasis", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </b>*@
+
+                            </div>         
+
                             <div>
-                                <label>Unidad Academica:</label> @Html.DropDownList("unidadAcademica", null, "<Seleccione Unidad Académica>", new { @class = "form-control" })
-                            </div>
-                            <div>
-                                <label> Carreras: </label> @Html.DropDownList("nombreCarrera", null, "<Seleccione Carrera>", new { @class = "form-control" })
-                            </div>
-                            <div>
-                                <label> Cursos: </label> @Html.DropDownList("nombreCurso", null, "<Seleccione Curso>", new { @class = "form-control" })
-                            </div>
-                            @*<div>
-                                <label> Semestre: </label> @Html.DropDownList("semestre", null, "<Seleccione Semestre>", new { @class = "form-control" })
-                            </div>*@
-                            @*<div>
-                                <label> Año: </label> @Html.DropDownList("ano", null, "<Seleccione Año>", new { @class = "form-control" })<br />
-                            </div>*@
-                            <div>
-                                @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
+                               <br> @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
                                 <input type="submit" value="Buscar" />
                             </div>
                         </p>
                     }
+
+
 
                 </div>
             </div>
@@ -54,7 +52,9 @@
         </div>
     </div>
 
-   @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
+
+
+    @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
     {
         <div class="row">
             <div class="col-sm-8">
