--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -43,9 +43,9 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Categoria, "NombreCategoria", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Categoria, "Categoría", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("NombreCategoria", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("NombreCategoria", null, "Seleccione")
             @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
         </div>
     </div>
