Se quitaron espacios y se quito la referencia de los links

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -33,11 +33,9 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfiles<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li >@Html.ActionLink("Cambiar perfil actual", "Index", "Perfil")</li>
-                            <li class="disabled">@Html.ActionLink("Asignar/Revocar permisos", "Falta", "Falta")</li>
-                            <li class="disabled">@Html.ActionLink("Asignar/Revocar perfiles", "Falta", "Falta")</li>
-                            <li class="disabled">@Html.ActionLink("Crear perfil", "Falta", "Falta")</li>
-                            <li class="disabled">@Html.ActionLink("Eliminar perfil", "Falta", "Falta")</li>
-
+                            <li class="disabled"><a>Asignar/Revocar permisos</a></li>
+                            <li class="disabled"><a>Crear perfi</a></li>
+                            <li class="disabled"><a>Eliminar perfil</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
