Implementacion de vista parcial para busqueda de forms

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/SeleccionFormularios.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/SeleccionFormularios.cshtml
@@ -2,7 +2,7 @@
 
 <div>
 
-    <table class="table">
+    <table class="fixed_header" ">
         <!-- Tabla para mostrar los formularios -->
         <tr></tr>
         @foreach (var item in Model)
