--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -21,10 +21,10 @@
                 <div class="panel-body">
                     <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
                     <!--<form asp-controller="AsignarFormularios" asp-action="Index">
-                        <p>
-                            Nombre: <input type="text" name="SearchString">
-                            <input type="submit" value="Buscar" />
-                        </p>
+                    <p>
+                        Nombre: <input type="text" name="SearchString">
+                        <input type="submit" value="Buscar" />
+                    </p>
                     </form>-->
                     <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
                     @using (Html.BeginForm())
@@ -51,125 +51,57 @@
                                 <input type="submit" value="Buscar grupos" />
                             </div>
                         </p>
-                        
 
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3>Buscar formularios</h3>
-                    </div>
-                    <div class="panel-body">
-                        @Html.TextBox("FormSearchString", "", new { placeholder = "Nombre del formulario" })
-                        <input type="submit" value="Buscar formularios" />
-                    </div>
+                    }
                 </div>
             </div>
         </div>
-    }
-
+    </div>
+    <div class="row">
         @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
         {
-            <div class="row">
-                <div class="col-sm-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Grupos</h3></div>
-                        <div class="panel-body">
+            <div class="col-sm-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Grupos</h3></div>
+                    <div class="panel-body">
 
-                            @*Tabla de grupos*@
+                        @*Tabla de grupos*@
 
-                            <table class="fixed_header">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            <div align='center'>Selec. para asignar</div>
-                                        </th>
-                                        <th>
-                                            <div align='center'>Sigla</div>
-                                        </th>
-                                        <th>
-                                            <div align='center'>Curso</div>
-                                        </th>
-                                        <th>
-                                            <div align='center'>Grupo</div>
-                                        </th>
-                                        <th>
-                                            <div align='center'>Profesor</div>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <!-- Despliega los datos de los grupos usando un modelo personalizado: ElegirGrupoEditorTemplate -->
-                                    @Html.EditorFor(model => Model.Grupos)
-                                </tbody>
-                            </table>
-                        </div>
-
-                    </div>
-                </div>
-
-
-
-                <div class="col-sm-4">
-
-
-            <div class="panel panel-default">
-                <div class="panel-heading"><h3>Resultados:</h3></div>
-                <div class="panel-body">
-                    <!-- Tabla de grupos -->
-                    <table class="fixed_header">
-                        <!-- Table row (fila) de encabezados. -->
-                        <thead>
-                            <!-- Table header -->
-                        <th>
-                            <div align='center'>Curso</div>
-                        </th>
-                        <th>
-                            <div align='center'>Ciclo</div>
-                        </th>
-                        <th>
-                            <div align='center'> Numero de grupo</div>
-                        </th>
-                        <th>
-                            <div align='center'>Seleccionar para asignar</div>
-                        </th>
-                        </thead>
-                        <tbody>
-                            <!-- Para cada item en Model::Grupos... -->
-                            @foreach (var item in Model.Grupos)
-                            {
-                                <!-- Table row (fila) de elementos -->
+                        <table class="fixed_header">
+                            <thead>
                                 <tr>
-                                    <!-- Nombre de curso -->
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.NombreCurso)
-                                    </td>
-                                    <!-- Año -->
-                                    <td>
-                                        <div align='center'>@Html.DisplayFor(modelItem => item.Anno) - @Html.DisplayFor(modelItem => item.Semestre)</div>
-                                    </td>
-                                    <!-- Numero de grupo -->
-                                    <td>
-                                        <div align='center'>@Html.DisplayFor(modelItem => item.Numero)</div>
-                                    </td>
-                                    <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
-                                    <td>
-                                        <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
-                                    </td>
+                                    <th>
+                                        <div align='center'>Selec. para asignar</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Sigla</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Curso</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Grupo</div>
+                                    </th>
+                                    <th>
+                                        <div align='center'>Profesor</div>
+                                    </th>
                                 </tr>
-                            }
-                        </tbody>
+                            </thead>
+                            <tbody>
+                                <!-- Despliega los datos de los grupos usando un modelo personalizado: ElegirGrupoEditorTemplate -->
+                                @Html.EditorFor(model => Model.Grupos)
+                            </tbody>
+                        </table>
+                    </div>
 
-                    </table>
                 </div>
             </div>
-        </div>
+        }
+
         <div class="col-sm-4">
 
             <div class="panel panel-default">
-                <div class="panel-heading"><h3>Tus formularios</h3></div>
+                <div class="panel-heading"><h3>Formularios</h3></div>
                 <div class="panel-body">
 
 
@@ -182,22 +114,10 @@
                         </div>
                     }
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Nombre)
-
-                                <td>
-                                    <!-- checkbox para elegir formulario-->
-                                    <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
-
-
-
-                            </tr>
-                        }
-
-
-                    </table>
                 </div>
             </div>
         </div>
     </div>
+        
+
 </div>
