Añadi validation summary.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -44,7 +44,8 @@
     </div>
     @*Caja para colocar el numero.*@
     <div class="row">
-
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Orden_Item, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
